<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.develop.tp2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.develop.tp2.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_apropos"
        android:name="com.develop.tp2.ui.apropos.AproposFragment"
        android:label="@string/menu_apropos"
        tools:layout="@layout/fragment_apropos" />
    <fragment
        android:id="@+id/nav_list"
        android:name="com.develop.tp2.ui.list.ListFragment"
        android:label="@string/menu_list"
        tools:layout="@layout/fragment_list" />
</navigation>